Wrapped bookmarklet in closure to prevent naming collisions

--- a/css/instamarks.css
+++ b/css/instamarks.css
@@ -1,3 +1,26 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-weight: inherit;
+	font-style: inherit;
+	font-size: 100%;
+	font-family: inherit;
+	vertical-align: baseline;
+}
+
+:focus {
+	outline: 0;
+}
+
 div#instamarks 
 {
 	display: block;
@@ -59,6 +82,7 @@ div#instamarks ul li
 	float: none;
 	clear: none;
 	padding: 0 25px 0 5px;
+	background-color: #FFF;
 	line-height: 1.4em;
 	border: 1px solid #F5F5F5;
 }
